infrastructure/production/kube-prometheus-stack/ingressConfig.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: grafana-dashboard
  namespace: kube-prometheus-stack
  annotations: 
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`grafana.lan.vandelocht.uk`)
      kind: Rule
      services:
        - name: kube-prometheus-stack-grafana
          port: 80
  tls:
    secretName: grafana-lan-vandelocht-uk-production-tls
